--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ pytest = "^7.2.1"
 cruft = ">=2.2"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
