--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,12 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: check-added-large-files
+        args: ['--maxkb=50000']
+
+-   repo: https://github.com/pycqa/isort
+    rev: 5.11.2
+    hooks:
+      - id: isort
 
 -   repo: https://github.com/psf/black
     rev: 22.12.0
@@ -17,4 +23,16 @@ repos:
     rev: 6.0.0
     hooks:
     -   id: flake8
-        args: ['--max-line-length=88', '--ignore=E203,W503']
+
+-   repo: https://github.com/python-poetry/poetry
+    rev: 1.3.2
+    hooks:
+    -   id: poetry-check
+    -   id: poetry-lock
+
+-   repo: https://github.com/commitizen-tools/commitizen
+    rev: master
+    hooks:
+    -   id: commitizen
+    -   id: commitizen-branch
+        stages: [push]
