--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,50 @@
 [tool.poetry]
 name = "qlinks"
-version = "0.1.0"
+version = "0.0.1"
 description = "Quantum link model"
-authors = ["taolin <tanlin2013@gmail.com>"]
+authors = ["Tan Tao-Lin <tanlin2013@gmail.com>"]
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-numpy = "^1.24.1"
+python = ">=3.7"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.1"
+[tool.poetry.dev-dependencies]
+pre-commit = "^2.19.0"
+commitizen = "^2.40.0"
+vulture = ">=1.0"
+bandit = ">=1.6"
+safety = ">=1.8"
+isort = ">=5.3"
+flake8-bugbear = ">=19.8"
+black = ">=18.3"
+mypy = ">=0.730.0"
+ipython = ">=7.7"
+pytest = ">=5.0"
+pytest-cov = ">=2.7"
+pytest-mock = ">=1.10"
+pep8-naming = ">=0.8.2"
 cruft = ">=2.2"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^4.5.0"
+sphinx-book-theme = "^0.3.2"
+nbsphinx = "^0.8.8"
+portray = ">=1.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+ignore_missing_imports = true
+strict_optional = false
