--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7"
+python = ">=3.7,<4.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
@@ -34,6 +34,10 @@ sphinx = "^4.5.0"
 sphinx-book-theme = "^0.3.2"
 nbsphinx = "^0.8.8"
 portray = ">=1.3.0"
+
+
+[tool.poetry.group.dev.dependencies]
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
