--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
         args: ['--maxkb=50000']
 
 -   repo: https://github.com/pycqa/isort
-    rev: 5.11.2
+    rev: 5.12.0
     hooks:
       - id: isort
 
@@ -25,13 +25,13 @@ repos:
     -   id: flake8
 
 -   repo: https://github.com/python-poetry/poetry
-    rev: 1.3.2
+    rev: 1.3.0
     hooks:
     -   id: poetry-check
-    -   id: poetry-lock
+#    -   id: poetry-lock
 
 -   repo: https://github.com/commitizen-tools/commitizen
-    rev: master
+    rev: v2.40.0
     hooks:
     -   id: commitizen
     -   id: commitizen-branch
