--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
+python = ">=3.8,<4.0"
+numpy = "^1.24.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.19.0"
