--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
-numpy = "^1.24.1"
+tqdm = "^4.63.0"
+numpy = ">=1.22"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.19.0"
@@ -26,7 +27,6 @@ pytest-cov = ">=2.7"
 pytest-mock = ">=1.10"
 pep8-naming = ">=0.8.2"
 cruft = ">=2.2"
-toml = "^0.10.2"
 
 [tool.poetry.group.docs]
 optional = true
@@ -35,6 +35,8 @@ optional = true
 sphinx = "^4.5.0"
 sphinx-book-theme = "^0.3.2"
 nbsphinx = "^0.8.8"
+m2r2 = "^0.3.2"
+pandoc = "^2.3"
 portray = ">=1.3.0"
 
 [build-system]
@@ -52,4 +54,4 @@ ignore_missing_imports = true
 strict_optional = false
 
 [tool.cruft]
-skip = ["Dockerfile"]
+skip = []
