--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     rev: 1.3.2
     hooks:
     -   id: poetry-check
-#    -   id: poetry-lock
+    -   id: poetry-lock
 
 -   repo: https://github.com/commitizen-tools/commitizen
     rev: v2.40.0
