--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Install dev dependencies
         run: |
-          poetry install
+          poetry install --all-extras
 
       - name: Test
         run: pytest tests/
@@ -69,7 +69,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==1.3.2
-          poetry install
+          poetry install --all-extras
 
       - name: Test
         shell: bash
