--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ readme = "README.md"
 python = "^3.8"
 tqdm = "^4.63.0"
 numpy = "^1.22"
+matplotlib = { version = "^3.6.3", optional = true}
+networkx = { version = "^3.0", optional = true}
+
+[tool.poetry.extras]
+drawing = ["matplotlib", "networkx"]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.19.0"
