--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.12"
 tqdm = "^4.63.0"
 numpy = "^1.22"
+scipy = "^1.10.0"
 matplotlib = { version = "^3.6.3", optional = true}
 networkx = { version = "^3.0", optional = true}
 
