--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ bandit = "^1.7.4"
 safety = "^2.3.4"
 isort = "^5.11.0"
 flake8-bugbear = "^22.10.25"
+Flake8-pyproject = "^1.2.2"
 black = "^22.12.0"
 mypy = "^0.990"
 ipython = "^8.5.0"
@@ -55,9 +56,21 @@ line-length = 100
 [tool.isort]
 profile = "black"
 
+[tool.flake8]
+count = true
+max-line-length = 100
+ignore = [
+    "E203",
+    "W503"
+]
+
 [tool.mypy]
 ignore_missing_imports = true
 strict_optional = false
+
+[tool.coverage.report]
+exclude_lines = ["pragma: no cover"]
+omit = ["*tests*"]
 
 [tool.bandit]
 skips = ["B101"]
