--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ ignore = [
 [tool.mypy]
 ignore_missing_imports = true
 strict_optional = false
+plugins = ["numpy.typing.mypy_plugin"]
 
 [tool.coverage.report]
 exclude_lines = ["pragma: no cover"]
