--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ safety = "^2.3.4"
 isort = "^5.11.0"
 flake8-bugbear = "^22.10.25"
 Flake8-pyproject = "^1.2.2"
-black = "^22.12.0"
+black = { extras = ["d"], version = "^22.12.0" }
 mypy = "^1.0.0"
 ipython = "^8.5.0"
 pytest = "^7.1.2"
