--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.8,<3.12"
 tqdm = "^4.63.0"
 numpy = "^1.22"
 scipy = "^1.10.0"
+ring = "^0.10.0"
 networkx = "^3.0"
 matplotlib = { version = "^3.6.3", optional = true}
 
