--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ numpy = "^1.22"
 scipy = "^1.10.0"
 ring = "^0.10.0"
 networkx = "^3.0"
+pulp = "^2.7.0"
 matplotlib = { version = "^3.6.3", optional = true}
 
 [tool.poetry.extras]
