--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ flake8-bugbear = "^23.1.14"
 Flake8-pyproject = "^1.2.2"
 black = { version = "^23.1.0", extras = ["d"] }
 mypy = "^1.0.0"
-ipython = "^8.5.0"
+jupyter = "^1.0.0"
 pytest = "^7.1.2"
 pytest-cov = "^4.0.0"
 pytest-mock = "^3.9.0"
