--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ jupyter = "^1.0.0"
 pytest = "^7.1.2"
 pytest-cov = "^4.0.0"
 pytest-mock = "^3.9.0"
+hypothesis = "^6.68.2"
 pep8-naming = "^0.13.0"
 cruft = "^2.12.0"
 
