--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     hooks:
     -   id: poetry-check
     -   id: poetry-lock
-        args: ['--no-update', '--no-cache', '-vvv']
+        args: ['--no-update', '--no-cache']
         stages: [push]
 
 -   repo: https://github.com/commitizen-tools/commitizen
