--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ tqdm = "^4.63.0"
 numpy = "^1.22"
 scipy = "^1.10.0"
 pandas = "^2.0.0"
+pyarrow = "^13.0.0"  # for parquet IO
 networkx = "^3.0"
 llvmlite = { version = "0.40.0" }
 numba = { version = "0.57.0" }
