--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   in-docker:
     runs-on: ubuntu-latest
     container:
-      image: docker://${{ github.repository }}:sha-${{ github.sha }}
+      image: docker://${{ github.repository }}:sha-${{ github.event.workflow_run.head_sha }}
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v3
