--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ networkx = "^3.0"
 llvmlite = { version = "0.40.0" }
 numba = { version = "0.57.0" }
 matplotlib = { version = "^3.6.3", optional = true}
+pyvis = { version = "^0.3.0", optional = true}
 plotly = { version = "^5.4.0", optional = true}
 
 [tool.poetry.extras]
