--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,9 +29,11 @@ repos:
     rev: 1.3.2
     hooks:
     -   id: poetry-check
-    -   id: poetry-lock
-        args: ['--no-update', '--no-cache']
+        args: ['--lock', '--no-cache']
         stages: [push]
+#    -   id: poetry-lock
+#        args: ['--no-update', '--no-cache']
+#        stages: [push]
 
 -   repo: https://github.com/commitizen-tools/commitizen
     rev: v2.40.0
