--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ### Custom field
 docs/source/notebooks/data/
+docs/source/notebooks/scar_robustness.ipynb
 sciagraph-result/
 
 ### VisualStudioCode template
