--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt-get install -y python3-sphinx pandoc
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry>=1.2.0
-          poetry install --with docs
+          poetry install --all-extras --with docs
 
       - name: Build Sphinx doc
         run: |
