--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ scipy = "^1.10.0"
 pandas = "^2.0.0"
 pyarrow = "^15.0.0"  # for parquet IO
 networkx = "^3.0"
+ortools = "^9.0.9048"
 matplotlib = { version = "^3.6.3", optional = true}
 pyvis = { version = "^0.3.0", optional = true}
 igraph = { version = "^0.11.2", optional = true}
