--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^2.0.0"
 pyarrow = "^15.0.0"  # for parquet IO
 networkx = "^3.0"
 ortools = "^9.0.9048"
+pynauty = "^2.8.6"
+sympy = "^1.9"
 matplotlib = { version = "^3.6.3", optional = true}
 pyvis = { version = "^0.3.0", optional = true}
 igraph = { version = "^0.11.2", optional = true}
