--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ safety = "^2.3.4"
 isort = "^5.11.0"
 flake8-bugbear = "^23.1.14"
 Flake8-pyproject = "^1.2.2"
-black = { version = "^23.1.0", extras = ["d"] }
+black = { version = "^23.1.0", extras = ["d", "jupyter"] }
 mypy = "^1.0.0"
 jupyter = "^1.0.0"
 pytest = "^7.1.2"
