--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ networkx = "^3.0"
 ortools = "^9.0.9048"
 pynauty = "^2.8.6"
 sympy = "^1.9"
+ray = "^2.24.0"
 matplotlib = { version = "^3.6.3", optional = true}
 pyvis = { version = "^0.3.0", optional = true}
 igraph = { version = "^0.11.2", optional = true}
