--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ sphinx-book-theme = "^1.0.0"
 nbsphinx = "^0.9.0"
 m2r2 = "^0.3.2"
 pandoc = "^2.3"
+docutils = "0.20.1"
 lxml = { version = "^5.0.0", extras = ["html_clean"]}
 #portray = "^1.3.0"
 
