--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,14 @@ ortools = "^9.0.9048"
 pynauty = "^2.8.6"
 sympy = "^1.9"
 ray = "^2.24.0"
-matplotlib = { version = "^3.10.0", optional = true}
-pyvis = { version = "^0.3.0", optional = true}
-igraph = { version = "^0.11.8", optional = true}
-pycairo = { version = "^1.27.0", optional = true}  # for igraph plotting
-plotly = { version = "^5.4.0", optional = true}
+matplotlib = { version = "^3.6.3", optional = false}
+pyvis = { version = "^0.3.0", optional = false}
+igraph = { version = "^0.11.2", optional = false}
+pycairo = { version = "^1.25.0", optional = false}  # for igraph plotting
+plotly = { version = "^5.4.0", optional = false}
 
-[tool.poetry.extras]
-drawing = ["matplotlib", "pyvis", "plotly", "pycairo", "igraph"]
+#[tool.poetry.extras]
+#drawing = ["matplotlib", "pyvis", "plotly", "pycairo", "igraph"]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.0"
